[CLD-500] Fix purgecss and correct spacing (#192)
* [CLD-500] Fix purgecss and correct spacing

* Update handler and test file

* Update handler argument type

* Remove unused import

--- a/src/styles/blocks/installed-app-card.scss
+++ b/src/styles/blocks/installed-app-card.scss
@@ -4,7 +4,7 @@ $icon-height: 130px;
 .container {
   width: $icon-width + 2px;
 }
-.wrapIcon {
+.wrap-icon {
   cursor: pointer;
   border-radius: 15px;
   border: 1px solid #95aac9;
@@ -21,9 +21,11 @@ $icon-height: 130px;
 }
 
 .app-title {
+  white-space: nowrap;
   margin-top: 1rem;
   text-align: center;
   text-overflow: ellipsis;
   overflow: hidden;
   font-size: 16px;
+  font-weight: bold;
 }
